<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/nav_list">

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.pokemontest.ui.fragments.ImageFragment"
        android:label="@string/image_fragment" />

    <fragment
        android:id="@+id/nav_image"
        android:name="com.example.pokemontest.ui.fragments.ListFragment"
        android:label="@string/list_fragment">
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" >
            <argument
                android:name="pokemon"
                app:argType="com.example.pokemontest.database.PokemonEntity" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.pokemontest.ui.fragments.DetailFragment"
        android:label="@string/detail_fragment" />

</navigation>