<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.example.pokemontest.utils.CustomImageView
            android:id="@+id/pokemonDetailImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:backgroundColor="@color/red"
            app:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pokemonDetailImageView" />

        <EditText
            android:id="@+id/urlEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/url_image"
            android:inputType="textUri"
            android:lines="3"
            android:minLines="3"
            android:maxLines="5"
            android:layout_marginTop="16dp"
            android:scrollHorizontally="false"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/loadImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_image"
            android:paddingHorizontal="12dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@id/urlEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/pokemonUrlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/loadImageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>